--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,2 +1,3 @@
+bazel_dep(name = "grpc", version = "1.68.0", repo_name = "com_github_grpc_grpc")
 bazel_dep(name = "protobuf", version = "29.2", repo_name = "com_google_protobuf")
-bazel_dep(name = "grpc", version = "1.68.0")
+bazel_dep(name = "rules_cc", version = "0.0.17")
